@@ -1,0 +1,1 @@
+package ifneeded picoirc 0.4 [list source [file join $dir picoirc.tcl]]
